# axon

./: .gitignore  BUILD.bazel  DEEP.md  Deep.md  GPU.md  HIP.md  Hip.md  Makefile  PCORE_BG.md  PCoreBG.md  PVLV.md  README.md  RL.md  Rubicon.md  TODO.md  WORKSPACE.bazel  doc.go  gazelle_repositories.bzl  go.mod  go.sum  make  make.cosh  project.manifest.toml
.core/: config.toml
.goki/: config.toml
agate/: maint.go  network.go  neuron.go  out.go
axon/: BUILD.bazel  GPU.md  Makefile  act-layer.go  act-layer.goal  act-net.go  act-net.goal  act-path.go  act-path.goal  act.go  act.goal  act.goal.go  act_path.go  act_prjn.go  act_test.go  act_test.goal  actnoisetype_string.go  actnoisetypes_string.go  avgmax.go  avgmaxi.go  axon.go  basic_test.go  basic_test.goal  blanovelprjn.go  body.go  cereb-layer.go  cereb-layer.goal  cereb-net.go  clamptypes_string.go  context.go  context_test.go  da.go  damodtypes_string.go  dars_string.go  deep-layer.go  deep-net.go  deep-path.go  deep_layers.go  deep_net.go  deep_paths.go  (+175 more)
axon/gpu_hlsl/: gpu_applyext.hlsl  gpu_betweengi.hlsl  gpu_cycle.hlsl  gpu_cycleinc.hlsl  gpu_cyclepost.hlsl  gpu_dwt.hlsl  gpu_dwtfmdi.hlsl  gpu_dwtsubmean.hlsl  gpu_gather.hlsl  gpu_laygi.hlsl  gpu_minusneuron.hlsl  gpu_minusphase.hlsl  gpu_minuspool.hlsl  gpu_newstate.hlsl  gpu_newstate_neuron.hlsl  gpu_newstate_pool.hlsl  gpu_plusneuron.hlsl  gpu_plusphase.hlsl  gpu_pluspool.hlsl  gpu_plusstart.hlsl  gpu_poolgemax.hlsl  gpu_poolgi.hlsl  gpu_postspike.hlsl  gpu_sendspike.hlsl  gpu_synca.hlsl  gpu_syncarecv.hlsl  gpu_syncasend.hlsl  gpu_test_synca.hlsl  gpu_wtfmdwt.hlsl
axon/gpu_wgsl/: gpu_applyext.wgsl  gpu_dwt.wgsl  gpu_postspike.wgsl
axon/gpu_wgsl/done/: gpu_cyclepost.wgsl  gpu_dwtfmdi.wgsl  gpu_gather.wgsl  gpu_laygi.wgsl  gpu_minuspool.wgsl  gpu_plusneuron.wgsl  gpu_pluspool.wgsl  gpu_plusstart.wgsl  gpu_poolgi.wgsl
axon/shaders/: AdaptGiLayer.wgsl  ApplyExtsNeuron.wgsl  Beta1Neuron.wgsl  Beta2Neuron.wgsl  BetweenGi.wgsl  CycleInc.wgsl  CycleNeuron.wgsl  CyclePost.wgsl  DWtFromDiSyn.wgsl  DWtSubMeanNeuron.wgsl  DWtSubMeanPath.wgsl  DWtSyn.wgsl  GPUTestWrite.wgsl  GatherSpikes.wgsl  InitGBuffsPath.wgsl  LayerGi.wgsl  Makefile  MinusPhaseNeuron.wgsl  MinusPhasePool.wgsl  MinusPhasePost.wgsl  NewStateLayer.wgsl  NewStateNeuron.wgsl  PlusPhaseEndNeuron.wgsl  PlusPhaseEndPool.wgsl  PlusPhaseEndPost.wgsl  PlusPhaseNeuron.wgsl  PlusPhasePool.wgsl  PlusPhasePost.wgsl  PlusPhaseStartContext.wgsl  PlusPhaseStartNeuron.wgsl  PoolGi.wgsl  SendSpike.wgsl  SlowAdaptLayer.wgsl  SlowAdaptNeuron.wgsl  WtFromDWtLayer.wgsl  WtFromDWtSyn.wgsl  gpu_applyext.spv  gpu_betweengi.spv  gpu_cycle.spv  gpu_cycleinc.spv  (+25 more)
chans/: BUILD.bazel  README.md  ak.go  chans.go  chans_test.go  doc.go  gabab.go  gtigen.go  kir.go  kna.go  mahp.go  nmda.go  sahp.go  skca.go  typegen.go  vgcc.go
chans/ak_plot/: BUILD.bazel  README.md  ak_plot.go  gtigen.go  typegen.go
chans/chanplots/: README.md  ak-plot.go  ak_plot.go  gabab-plot.go  kir-plot.go  kir_plot.go  mahp-plot.go  nmda-plot.go  sahp-plot.go  sahp_plot.go  skca-plot.go  skca_plot.go  synca-plot.go  typegen.go  vgcc-plot.go
chans/gabab_plot/: BUILD.bazel  README.md  gabab.go  gabab_plot.go  gtigen.go  typegen.go
chans/kir_plot/: gtigen.go  kir_plot.go  typegen.go
chans/mahp_plot/: BUILD.bazel  README.md  fig_mahp_tau.tsv  fig_mahp_vs_fkna.tsv  gtigen.go  mahp_plot.go  typegen.go
chans/nmda_plot/: BUILD.bazel  README.md  gtigen.go  nmda_plot.go  typegen.go
chans/sahp_plot/: BUILD.bazel  README.md  gtigen.go  sahp_plot.go  typegen.go
chans/skca_plot/: BUILD.bazel  README.md  gtigen.go  skca_plot.go  typegen.go
chans/vgcc_plot/: BUILD.bazel  README.md  gtigen.go  typegen.go  vgcc.go  vgcc_plot.go
deep/: BUILD.bazel  README.md  basic_test.go  ct.go  ctxtprjn.go  doc.go  layer.go  layertype_string.go  logging.go  network.go  neuron.go  pt.go  pulv.go  super.go  thal.go  topoinhib.go  trc.go  trn.go
examples/hip/: BUILD.bazel  best_2-20.diff  config.go  def_params.go  grunter_ror.py  gtigen.go  hip.go  hip.params  hip.py  hip_test.go  jobs.active  jobs.archive  jobs.delete  jobs.done  orig_params.go  params.go  typegen.go
examples/hip/configs/: bighip.toml  medhip.toml  smallhip.toml
examples/hip/params_good/: config.toml  params.toml  params_all.txt  params_layers.txt  params_nondef.txt  params_paths.txt  params_prjns.txt
fffb/: BUILD.bazel  README.md  adapt.go  bg.go  fffb.go  gtigen.go  inhib.go  typegen.go
fsfffb/: README.md  enumgen.go  fsfffb.go  gtigen.go  inhib.go  typegen.go
glong/: alphamax.go  gabab.go  layer.go  network.go  neuron.go  nmda.go  vgcc.go
hip/: chl.go  doc.go  ecca1.go
interinhib/: README.md  interinhib.go
kinase/: BUILD.bazel  README.md  enumgen.go  funts.go  gtigen.go  kinase_test.go  linear.go  linear_test.go  params.go  regress.go  rules.go  rules_string.go  syncabin.go  typegen.go
kinase/linear/: README.md  linear.go  linear_data.tsv  linear_test.go
kinase/plot/: gtigen.go  synca_plot.go  typegen.go
kinasex/: README.md  contprjn.go  contsyn.go  gtigen.go
knadapt/: BUILD.bazel  knadapt.go
nxx1/: gtigen.go  nxx1.go  nxx1_test.go  typegen.go
pbwm/: cin.go  dahebb.go  doc.go  gate.go  gpi.go  layer.go  matrix.go  matrix_trace.go  modlayer.go  network.go  neuron.go  pbwm.go  pfcdeep.go
pcore/: PCORE_BG.md  README.md  cin.go  gp.go  gpi.go  hypothal.go  layer.go  layertype_string.go  matrix.go  matrixprjn.go  network.go  neuron.go  pt.go  stn.go  thal.go  tracesyn.go  vthal.go
pvlv/: README.md  amyg_mod_prjn.go  bl_amyg.go  bla.go  cel_amyg.go  da.go  dars_string.go  layer.go  lhb_rmtg.go  mod_layer.go  msn.go  msn_prjn.go  network.go  neuron.go  pptg.go  pv_layer.go  vta.go
python/: README.md  go.mod
rl/: README.md  ach.go  da.go  layer.go  layertype_string.go  network.go  rew.go  rsalience.go  rw.go  td.go
simscripts/: 00-Jobs.cosh  05-Queue.cosh  10-Status.cosh  20-Fetch.cosh  30-Submit.cosh  50-Results.cosh  55-Avg.cosh  55-Diff.cosh  60-Plot.cosh  65-Reset.cosh  70-Cancel.cosh  70-DeleteJobs.cosh  80-Delete.cosh  85-Archive.cosh  90-Config.cosh  README.md  (+5 more)
(+1005 files in other folders)
