load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = ["@bazel_gazelle//language/go"],
)

# We use gazelle to generate BUILD.bazel files. See
# https://github.com/bazelbuild/bazel-gazelle/blob/master/README.rst

# gazelle:prefix github.com/emer/axon
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

genrule(
    name = "gen_dummy_test",
    outs = ["dummy_test.sh"],
    cmd = "echo \"true\" > \"$@\"",
    executable = True,
)

# This is here because currently no other tests
# in the repo are passing. We want to keep the CI
# running `bazel test //...`, so we need at least
# one test that passes.
sh_test(
    name = "dummy_test",
    timeout = "short",
    srcs = ["dummy_test.sh"],
)

go_library(
    name = "axon",
    srcs = ["doc.go"],
    importpath = "github.com/emer/axon",
    visibility = ["//visibility:public"],
)
