load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "16e9fca53ed6bd4ff4ad76facc9b7b651a89db1689a2877d6fd7b82aa824e366",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
    ],
)

http_archive(
    name = "bazel_gazelle",
    sha256 = "501deb3d5695ab658e82f6f6f549ba681ea3ca2a5fb7911154b5aa45596183fa",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
    ],
)

# BEGIN GO

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
load("//:gazelle_repositories.bzl", "go_repositories")

# gazelle:repository_macro gazelle_repositories.bzl%go_repositories

# gazelle:repository go_repository name=com_github_go_gl_glfw_v3_3_glfw importpath=github.com/go-gl/glfw/v3.3/glfw

_GLFW_COMMIT = "307caeaa7c4efef651858299de6dd55dabbdd9b1"

http_archive(
    name = "com_github_go_gl_glfw_v3_3_glfw",
    sha256 = "8313e9100697e23213a829073d8a3d81c5d0134dac731415a8e486212bc0c84b",
    strip_prefix = "glfw-%s/v3.3/glfw" % _GLFW_COMMIT,
    url = "https://github.com/garymm/glfw/archive/%s.zip" % _GLFW_COMMIT,
)

go_repositories()

go_rules_dependencies()

go_register_toolchains(version = "1.18.5")

# We use gazelle to generate BUILD.bazel files. See
# https://github.com/bazelbuild/bazel-gazelle/blob/master/README.rst
gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")

# END GO
