load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "axon",
    srcs = [
        "act.go",
        "axon.go",
        "doc.go",
        "hebbprjn.go",
        "helpers.go",
        "inhib.go",
        "layer.go",
        "layerbase.go",
        "learn.go",
        "logging.go",
        "looper.go",
        "network.go",
        "networkbase.go",
        "neurflags_string.go",
        "neuron.go",
        "nmdaprjn.go",
        "pool.go",
        "prjn.go",
        "prjnbase.go",
        "prjntype_string.go",
        "synapse.go",
        "time.go",
        "version.go",
    ],
    importpath = "github.com/emer/axon/axon",
    visibility = ["//visibility:public"],
    deps = [
        "//chans",
        "//fffb",
        "//kinase",
        "//knadapt",
        "@com_github_c2h5oh_datasize//:datasize",
        "@com_github_emer_emergent//ecmd",
        "@com_github_emer_emergent//edge",
        "@com_github_emer_emergent//egui",
        "@com_github_emer_emergent//elog",
        "@com_github_emer_emergent//emer",
        "@com_github_emer_emergent//env",
        "@com_github_emer_emergent//erand",
        "@com_github_emer_emergent//estats",
        "@com_github_emer_emergent//etime",
        "@com_github_emer_emergent//looper",
        "@com_github_emer_emergent//netview",
        "@com_github_emer_emergent//params",
        "@com_github_emer_emergent//prjn",
        "@com_github_emer_emergent//relpos",
        "@com_github_emer_emergent//ringidx",
        "@com_github_emer_emergent//timer",
        "@com_github_emer_emergent//weights",
        "@com_github_emer_etable//agg",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//minmax",
        "@com_github_emer_etable//split",
        "@com_github_goki_gi//gi",
        "@com_github_goki_gi//giv",
        "@com_github_goki_ki//bitflag",
        "@com_github_goki_ki//indent",
        "@com_github_goki_ki//ints",
        "@com_github_goki_ki//ki",
        "@com_github_goki_ki//kit",
        "@com_github_goki_kigen//dedupe",
        "@com_github_goki_mat32//:mat32",
    ],
)

go_test(
    name = "axon_test",
    srcs = [
        "act_test.go",
        "basic_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":axon"],
    deps = [
        "@com_github_emer_emergent//emer",
        "@com_github_emer_emergent//params",
        "@com_github_emer_emergent//prjn",
        "@com_github_emer_etable//etensor",
        "@com_github_goki_mat32//:mat32",
    ],
)
