load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deep",
    srcs = [
        "ct.go",
        "ctxtprjn.go",
        "doc.go",
        "layer.go",
        "layertype_string.go",
        "logging.go",
        "network.go",
        "neuron.go",
        "pools.go",
        "prjntype_string.go",
        "pt.go",
        "pulv.go",
        "super.go",
        "trn.go",
    ],
    importpath = "github.com/emer/axon/deep",
    visibility = ["//visibility:public"],
    deps = [
        "//axon",
        "@com_github_emer_emergent//elog",
        "@com_github_emer_emergent//emer",
        "@com_github_emer_emergent//etime",
        "@com_github_emer_emergent//evec",
        "@com_github_emer_emergent//prjn",
        "@com_github_emer_emergent//relpos",
        "@com_github_emer_etable//agg",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//minmax",
        "@com_github_goki_ki//ints",
        "@com_github_goki_ki//ki",
        "@com_github_goki_ki//kit",
        "@com_github_goki_mat32//:mat32",
    ],
)

go_test(
    name = "deep_test",
    srcs = ["basic_test.go"],
    data = glob(["testdata/**"]),
    embed = [":deep"],
    # TODO: fix or delete this test
    tags = ["manual"],
    deps = [
        "//axon",
        "@com_github_emer_emergent//emer",
        "@com_github_emer_emergent//params",
        "@com_github_emer_emergent//prjn",
        "@com_github_emer_etable//etensor",
        "@com_github_goki_mat32//:mat32",
    ],
)
