load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kinase",
    srcs = [
        "params.go",
        "rules.go",
        "rules_string.go",
    ],
    importpath = "github.com/emer/axon/kinase",
    visibility = ["//visibility:public"],
    deps = ["@com_github_goki_ki//kit"],
)
